# 2D-Game

./: .gitignore  Cargo.toml  GDD.md  HelloWorld.gdnlib  HelloWorld.gdns  Inventory.gdns  Inventory.tscn  Node2D.tscn  Player.gdnlib  Player.gdns  README.md  TODO  project.godot
.import/: Death.png-79ef2066ece8f1b5fe05efad0dd7a8e5.md5  Death.png-79ef2066ece8f1b5fe05efad0dd7a8e5.stex  Fireball.wav-3230bf8890fcf32ca7650726f438c44c.md5  Fireball.wav-3230bf8890fcf32ca7650726f438c44c.sample  Fireball_Wall.wav-2d28053770e33298c7170f8d9bdeb9f2.md5  Fireball_Wall.wav-2d28053770e33298c7170f8d9bdeb9f2.sample  Slime.png-0a377fb8ec9eafb6b497fa7e60d1e79b.md5  Slime.png-0a377fb8ec9eafb6b497fa7e60d1e79b.stex  Spikes.png-bbe90a33a7f9a0263988ab88495acc54.md5  Spikes.png-bbe90a33a7f9a0263988ab88495acc54.stex  TODO.png-9cb72e058fec78fcacf3c2bc35232bce.md5  TODO.png-9cb72e058fec78fcacf3c2bc35232bce.stex  WTFIsThis.png-7a93f86440893e566005d50acfa419b5.md5  WTFIsThis.png-7a93f86440893e566005d50acfa419b5.stex  Wandering.wav-0a5028766952e9ad52c28428d3976908.md5  WeaponThrow.png-796d1916088833516543609c1c39248a.md5  WeaponThrow.png-796d1916088833516543609c1c39248a.stex
.mono/metadata/: ide_messaging_meta.txt
2D-Game — копия — копия — копия — копия — копия — копия/: default_bus_layout.tres  project.godot
2D-Game — копия — копия — копия — копия — копия — копия/scenes/: Background.tscn  Bat.tscn  Being.tscn  Enemy.tscn  Main.tscn  Player.tscn  Terrain_01.tscn
Concept/: Stuff.txt
Snake/: Cargo.toml
plugin/: Cargo.toml
plugin/src/: events.rs  lib.rs  physics.rs  player.rs  weapons.rs
plugin/src/components/: collider.rs  death.rs  ground.rs  layers.rs  mod.rs  rangedweapon.rs  rigidbody.rs
scenes/: Background.tscn  Bat.tscn  Being.tscn  DeathTrigger.tscn  Enemy.tscn  Inventory.tscn  Main.tscn  MainMenu.tscn  Node2D.tscn  Player.tscn  Terrain_01.tscn
src/: lib.rs  main.rs  player.rs
themes/: button.tres
(+98 files in other folders)
