[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_rapier2d = { version = "0.12.1", features = ["wasm-bindgen"] }
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
bevy = { version = "0.6" }
bevy_kira_audio = { version = "0.8.0", features = ["wav"] }

bevy-inspector-egui = { version = "0.10", optional = true }
